mdmCeneveo/src/objects/Opportunity_Snap__c.object
<CustomObject>
    <description>2nd Try for Oppt Snapshots</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Customer - New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - Existing Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer - Existing Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Opportunity Snap</label>
    <nameField>
        <label>Opportunity Snaps Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>